# GraphRAG4Rec

./: README.md  pyproject.toml
src/: configs.py  streamlit.py
src/graphragrec/embed/community/: report.py  summary.py
src/graphragrec/extract/: claim.py  entities.py  relation.py
src/graphragrec/graph/: communities.py  graph.py
src/graphragrec/prompts/: prompts.py
src/graphragrec/prompts/embed/: community.txt  communitycombine.txt
src/graphragrec/prompts/extract/: claim.txt  entity.txt  relation.txt
src/graphragrec/prompts/query/: communicate.txt  map.txt  reduce.txt
src/graphragrec/query/: recommend.py
src/graphragrec/query/reports/: map.py  reduce.py
src/graphragrec/schemas/embed/: community.py
src/graphragrec/schemas/extract/: claims.py  entities.py  relations.py
src/graphragrec/schemas/query/: map.py  reduce.py
src/graphragrec/utils/: detect_communities.py  usage.py  visualize_graph.py
src/graphragrec/utils/helpers/: batch_community_reports.py
src/imdb/data/: imdb_top_100.json
src/imdb/notebooks/: format.ipynb
src/llm/: base.py  context.py  localllm.py
