[tool.poetry]
name = "graphrag4rec"
version = "0.1.0"
description = ""
authors = ["vatsalsaglani <saglanivatsal@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.3"
numpy = "<2.0"
pandas = "^2.2.2"
transformers = "^4.42.4"
tiktoken = "^0.7.0"
httpx = "0.25.0"
openai = "^1.35.13"
claudetools = "^0.9.1"
llama-cpp-python = {extras = ["server"], version = "^0.2.82"}
tokenizers = "^0.19.1"
pydantic = "2.4.2"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
rich = "^13.7.1"
backoff = "^2.2.1"
leidenalg = "^0.10.2"
igraph = "^0.11.6"
matplotlib = "^3.9.1"
pyvis = "^0.3.2"
json-repair = "^0.25.3"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
ipykernel = "^6.29.5"
yapf = "^0.40.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
